Menu alignment is correct with first-child pseudoclass

--- a/css/readable.css
+++ b/css/readable.css
@@ -253,7 +253,7 @@ html {
 	margin-top: -3em; 
 }
 
-#menu ul ul ul li {
+#menu ul ul ul li:first-child {
 	margin-top: -1px;
 }
 
